--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -746,6 +746,7 @@ async function loadNotifications() {
 // Rendre les notifications
 function renderNotifications(notifications) {
   const container = document.getElementById('notificationList');
+  console.log(notifications)
   
   if (notifications.length === 0) {
     container.innerHTML = `
@@ -768,8 +769,9 @@ function renderNotifications(notifications) {
       </div>
       <div class="notification-content">
         <div class="notification-title">
-          ${escapeHtml(notif.title)}
+          ${escapeHtml(notif.title)}  
           ${notif.priority && notif.priority !== 'low' ? `<span class="priority-badge ${notif.priority}">${notif.priority}</span>` : ''}
+          <i class="fas ${notif.icon}"></i>
         </div>
         <div class="notification-message">${escapeHtml(notif.message)}</div>
         <div class="notification-time">
