creadential crud front

--- a/templates/credential/index.html.twig
+++ b/templates/credential/index.html.twig
@@ -471,6 +471,17 @@
   @keyframes spin {
     to { transform: rotate(360deg); }
   }
+  .site-icon {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+
 </style>
 
 
@@ -525,8 +536,16 @@
           <div class="card-body">
             <div class="site-info">
               <div class="site-icon">
-                {{ credential.name|first|upper }}
-              </div>
+  <img 
+    src="https://www.google.com/s2/favicons?domain={{ credential.domain }}&sz=32" 
+    alt="favicon" 
+    onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';"
+  >
+  <div class="fallback" style="display:none;">
+    {{ credential.name|first|upper }}
+  </div>
+</div>
+
               <div class="site-details">
                 <h3 class="site-name">{{ credential.name }}</h3>
                 <div class="site-url">{{ credential.domain }}</div>
