--- a/templates/credential/new.html.twig
+++ b/templates/credential/new.html.twig
@@ -11,13 +11,13 @@
 {% block body %}
 
  {# Fil d'Ariane #}
-{% include 'components/parts/_breadcrumb.html.twig' with {
+{# {% include 'components/parts/_breadcrumb.html.twig' with {
   items: [
     { url: path('app_dashboard'), icon: 'fas fa-home', label: 'Tableau de bord' },
     { url: path('app_credential'), icon: 'fas fa-key', label: 'Identifiants' },
     { label: 'Nouvel identifiant', active: true }
   ]
-} %}
+} %} #}
         {# En-tête de page #}
         <div class="page-header">
             <div class="page-header-content">
