--- a/templates/components/parts/_breadcrumb.html.twig
+++ b/templates/components/parts/_breadcrumb.html.twig
@@ -22,6 +22,7 @@
 .breadcrumb-item {
   display: flex;
   align-items: center;
+  gap: 5px;
 }
 
 .breadcrumb-item a {
@@ -65,28 +66,33 @@
 
 
 </style>
-        <nav class="breadcrumb-nav" aria-label="Fil d'Ariane">
-            <ol class="breadcrumb-list">
-                <li class="breadcrumb-item">
-                    <a href="{{ path('app_dashboard') }}">
-                        <i class="fas fa-home"></i>
-                        <span>Tableau de bord</span>
-                    </a>
-                </li>
-                <li class="breadcrumb-separator" aria-hidden="true">
-                    <i class="fas fa-chevron-right"></i>
-                </li>
-                <li class="breadcrumb-item">
-                    <a href="{{ path('app_credential') }}">
-                        <i class="fas fa-key"></i>
-                        <span>Identifiants</span>
-                    </a>
-                </li>
-                <li class="breadcrumb-separator" aria-hidden="true">
-                    <i class="fas fa-chevron-right"></i>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">
-                    Nouvel identifiant
-                </li>
-            </ol>
-        </nav>
+<nav class="breadcrumb-nav" aria-label="Fil d'Ariane">
+  <ol class="breadcrumb-list">
+    {% for item in items %}
+      {% set isActive = item.active is defined and item.active %}
+
+      <li class="breadcrumb-item {% if isActive %}active{% endif %}">
+        {% if item.url is defined and not isActive %}
+          <a href="{{ item.url }}">
+            {% if item.icon is defined %}
+              <i class="{{ item.icon }}"></i>
+            {% endif %}
+            <span> {{ item.label }}</span>
+          </a>
+        {% else %}
+          {% if item.icon is defined %}
+            <i class="{{ item.icon }}"></i>
+          {% endif %}
+          <span> {{ item.label }}</span>
+        {% endif %}
+      </li>
+      {% if not loop.last %}
+        <li class="breadcrumb-separator" aria-hidden="true">
+          <i class="fas fa-chevron-right"></i>
+        </li>
+      {% endif %}
+    {% endfor %}
+  </ol>
+</nav>
+
+
