--- a/templates/components/sidebar.html.twig
+++ b/templates/components/sidebar.html.twig
@@ -385,8 +385,8 @@
         <span>Partages sécurisées</span>
       </a>
 
-      <a href=""
-         class="nav-item {{ app.request.attributes.get('_route') == 'app_notes' ? 'active' : '' }}">
+      <a href="{{path('app_extention')}}"
+         class="nav-item {{ app.request.attributes.get('_route') == 'app_extention' ? 'active' : '' }}">
         <i class="fas fa-plug"></i>
         <span>Extension navigateur</span>
       </a>
