--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -625,10 +625,7 @@
   <!-- Logo -->
   <div class="header-logo">
     <div class="logo-container">
-      <div class="logo">
-        <i class="fas fa-shield-halved"></i>
-      </div>
-      <span class="logo-text">MykeyNest</span>
+    {% include 'components/parts/logo.html.twig' %}
     </div>
   </div>
 
