--- a/templates/base_auth.html.twig
+++ b/templates/base_auth.html.twig
@@ -26,7 +26,7 @@
     <meta property="twitter:image" content="{{ asset('images/twitter-image.jpg') }}" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="{{ asset('favicon.png') }}" />
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     <link rel="apple-touch-icon" href="{{ asset('apple-touch-icon.png') }}" />
     
     <!-- Canonical URL -->
